# podcast-ctl

./: .gitignore  Cargo.toml  LICENSE  rust-toolchain.toml
config/bagman/: channel.yaml
config/bagman/episodes/: 2022-09-01-session.yaml
config/example/: channel.yaml
config/example/episodes/: 2022-09-01-session.yaml
src/: config.rs  main.rs  upload.rs  xml.rs
