[package]
name = "podcastctl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
clap = { version = "3.2.20", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
human-panic = "1.0"
thiserror = "1.0"
env_logger = { version = "0.9" }
log = "0.4"
rusoto_s3 = "0.48"
rusoto_core = "0.48"
read-progress-stream = "1.0"
dotenv = "0.15"
pbr = "1.0"
tokio-util = "0.7"
futures = "0.3"
mp3-metadata = "0.3.4"
quick-xml = "0.24.0"
comrak = "0.14.0"
mime_guess = "2.0.4"
mime = "0.3"

[dependencies.uuid]
version = "1.1.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]